# FourDimensionalData

./: .gitignore  MANIFEST.in  README.md  base.py  setup.cfg  setup.py  utils.py
FourDimensionalData/: __init__.py  base.py  utils.py
FourDimensionalData/TVIPS/: __init__.py  __main__.py  load_gui.py  main.ui  tvipsfile.py
FourDimensionalData/blockfile/: blockfile.py
conda/: meta.yaml
data4d/: __init__.py  base.py  utils.py
data4d/TVIPS/: __init__.py  tvipsfile.py
data4d/TVIPS/GUI/: PySide2_dynamic.py  __init__.py  main.py
data4d/blockfile/: __init__.py  blockfile.py
tests/: conftest.py  test_fixtures.py  test_import.py
