[metadata]
name = data4d
version = file: data4d/VERSION
url = https://github.com/harripj/FourDimensionalData
author = Patrick Harrison
author_email = harrison.p.j@icloud.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = Parsers for Four Dimensional Electron Microscopy Data
long_description = file: README.md
keywords = electron microcopy, diffraction, multi-dimensional data
license_files = 
    LICENSE
    
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21
    scipy
    tqdm
    matplotlib>=3.5
    ipywidgets
    PySide2
    pyqtgraph
    hyperspy
    ked

[options.packages.find]
include =
    data4d
    data4d.*


[options.extras_require]
dev =
    black
    isort

[bdist_wheel]
universal = 0

[isort]
profile = black
filter_files = True
force_sort_within_sections = True
known_first_party = data4d
src_paths = data4d,tests